--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </p>
         <a href="#register" class="cta-btn">Get Started →</a>
       </section>
+      <hr class="break-line">
       <section id="about">
         <h2>About LiftForge</h2>
         <p>
@@ -33,74 +34,89 @@
           that are tailored to their unique needs and preferences.
         </p>
       </section>
+      <hr class="break-line">
       <section id="routine">
-  <div class="container">
-    <h2>Our Workout Routines</h2>
-    <h3>Choose a workout routine that fits your fitness level and goals !</h3>
-    <div class="routine-cards">
-      <div class="routine-card">
-       <h3>Full-Body Routine</h3>
-        <!-- <img src="full-body.jpg" alt="Full-Body Routine"> -->
-        <p>A full-body workout routine designed to work all major muscle groups, perfect for beginners or anyone looking for a well-rounded workout.</p>
-        <a href="#" class="btn">View Routine</a>
-      </div>
-      <div class="routine-card">
-        <h3>Upper-Body Routine</h3>
-        <!-- <img src="upper-body.jpg" alt="Upper-Body Routine"> -->
-        <p>An upper-body workout routine designed to build strength and definition in the chest, back, shoulders, and arms.</p>
-        <a href="#" class="btn">View Routine</a>
-      </div>
-      <div class="routine-card">
-        <h3>Lower-Body Routine</h3>
-        <!-- <img src="lower-body.jpg" alt="Lower-Body Routine"> -->
-        <p>A lower-body workout routine designed to target the glutes, quads, hamstrings, and calves, for a strong and toned lower half.</p>
-        <a href="#" class="btn">View Routine</a>
-      </div>
-    </div>
-  </div>
-</section>
-
-      <section id="programs">
-        <h2>Our Training Programs</h2>
-        <p>
-          Our training programs are designed to help you take your fitness to
-          the next level, whether you're a beginner or an experienced athlete.
-          We offer a range of programs that are suitable for all ages and
-          experience levels, including:
-        </p>
-      </section>
-        <div class="program-cards">
-          <div class="program-card">
-            <h3>Beginner Program</h3>
-            <!-- <img src="beginner.jpg" alt="Beginner Program" /> -->
-            <p>
-              A program designed for those new to fitness, focusing on building
-              strength and endurance.
-            </p>
-            <a href="#" class="btn">View Program</a>
-          </div>
-          <div class="program-card">
-            <h3>Intermediate Program</h3>
-            <!-- <img src="intermediate.jpg" alt="Intermediate Program" /> -->
-            <p>
-              A program designed for those with some fitness experience,
-              focusing on increasing strength and muscle mass.
-            </p>
-            <a href="#" class="btn">View Program</a>
-          </div>
-          <div class="program-card">
-            <h3>Advanced Program</h3>
-            <!-- <img src="advanced.jpg" alt="Advanced Program" /> -->
-            <p>
-              A program designed for experienced athletes, focusing on pushing
-              your limits and improving performance.
-            </p>
-            <a href="#" class="btn">View Program</a>
+        <div class="container">
+          <h2>Our Workout Routines</h2>
+          <p>
+            Choose a workout routine that fits your fitness level and goals.
+          </p>
+          <div class="routine-cards">
+            <div class="routine-card">
+              <h3>Full-Body Routine</h3>
+              <img src="/full-body.jpg" alt="Full-Body Routine" />
+              <p>
+                A full-body workout routine designed to work all major muscle
+                groups, perfect for beginners or anyone looking for a
+                well-rounded workout.
+              </p>
+              <a href="#" class="btn">View Routine</a>
+            </div>
+            <div class="routine-card">
+              <h3>Upper-Body Routine</h3>
+              <img src="/upper-body.jpg" alt="Upper-Body Routine" />
+              <p>
+                An upper-body workout routine designed to build strength and
+                definition in the chest, back, shoulders, and arms.
+              </p>
+              <a href="#" class="btn">View Routine</a>
+            </div>
+            <div class="routine-card">
+              <h3>Lower-Body Routine</h3>
+              <img src="/lower-body.jpg" alt="Lower-Body Routine" />
+              <p>
+                A lower-body workout routine designed to target the glutes,
+                quads, hamstrings, and calves, for a strong and toned lower
+                half.
+              </p>
+              <a href="#" class="btn">View Routine</a>
+            </div>
           </div>
         </div>
+      </section>
+      <hr class="break-line">
+      <section id="programs">
+        <div class="container">
+          <h2>Training Programs</h2>
+          <p>
+            Our training programs are designed to help you take your fitness to
+            the next level, whether you're a beginner or an experienced athlete.
+            We offer a range of programs that are suitable for all ages and
+            experience levels, including:
+          </p>
+          <div class="program-cards">
+            <div class="program-card">
+              <h3>Beginner Program</h3>
+              <img src="/beginner.jpg" alt="Beginner Program" />
+              <p>
+                A program designed for those new to fitness, focusing on
+                building strength and endurance.
+              </p>
+              <a href="#" class="btn">View Program</a>
+            </div>
+            <div class="program-card">
+              <h3>Intermediate Program</h3>
+              <img src="inter.jpg" alt="Intermediate Program" />
+              <p>
+                A program designed for those with some fitness experience,
+                focusing on increasing strength and muscle mass.
+              </p>
+              <a href="#" class="btn">View Program</a>
+            </div>
+            <div class="program-card">
+              <h3>Advanced Program</h3>
+              <img src="advanced.jpg" alt="Advanced Program" />
+              <p>
+                A program designed for experienced athletes, focusing on pushing
+                your limits and improving performance.
+              </p>
+              <a href="#" class="btn">View Program</a>
+            </div>
+          </div>
+        </div>
+      </section>
       <footer>
-        <a href="#contact">Contact_Us</a>
-        <p>If you have any questions or comments, please don't hesitate to contact us</p>
+        <p>&copy; 2023 FitForge. All rights reserved</p>
       </footer>
     </main>
   </body>
